#68 OpenApi spec to list available scripts + generated script server
